--- a/desainperpus_vanya.csproj
+++ b/desainperpus_vanya.csproj
@@ -14,6 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Student\SearchReturned.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Update="Student\SearchBorrowing.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Update="Student\StudentDash.cs" />
   </ItemGroup>
 
